<?xml version="1.0" encoding="UTF-8"?>
<!-- vertigo - simple java starter Copyright (C) 2013, KleeGroup, direction.technique@kleegroup.com 
	(http://www.kleegroup.com) KleeGroup, Centre d'affaire la Boursidiere - BP 
	159 - 92357 Le Plessis Robinson Cedex - France Licensed under the Apache 
	License, Version 2.0 (the "License"); you may not use this file except in 
	compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>io.vertigo</groupId>
		<artifactId>vertigo-parent</artifactId>
		<version>3.3.0</version>
	</parent>

	<artifactId>vertigo-bot-factory</artifactId>
	<version>0.9.0-SNAPSHOT</version>
	<name>vertigo-bot-factory</name>
	<packaging>pom</packaging>
	
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<vertigo.version>3.3.0</vertigo.version>
		
		<sonar.exclusions>**/javagen/**</sonar.exclusions>
		<log4j.version>2.16.0</log4j.version>
		<apache.common.version>3.12.0</apache.common.version>
		<liquibase.version>4.6.2</liquibase.version>
		<clamav-client.version>2.1.2</clamav-client.version>
	</properties>
	<modules>
		<module>vertigo-bot-designer</module>
		<module>vertigo-bot-executor</module>
		<module>vertigo-bot-commons</module>
		<module>vertigo-bot-extensions</module>
	</modules>
	
</project>
